--- a/B7bakery.html
+++ b/B7bakery.html
@@ -61,7 +61,7 @@ function addby()
      <input type="text" name="message" id="pastry"></br>
 
 
-<input type="button" value="  submit  " onClick="addby();"/>
+<button onclick="addby()">submit</button>
 
 </br></br>
 <p> Your total bill amount is : </p>
