--- a/B7bakery.html
+++ b/B7bakery.html
@@ -58,14 +58,14 @@ function addby()
   <option value="15">Butterscotch(15)</option>
  </select></br></br>
  	  <label><b>Choose the number of pastries you want</b></label>
-     <input type="text" name="message" id="pastry"></br>
+<input type="text" name="message" id="pastry"></br></br>
 
 
 <button onclick="addby()">submit</button>
 
 </br></br>
-<p> Your total bill amount is : </p>
-<p><span id='result'></span></p>
+<p> <h2>Your total bill amount is : </h2> </p>
+<h2><p id='result'></p></h2>
 
 </body>
 </head>
